--- a/Whonix.wxs
+++ b/Whonix.wxs
@@ -1,8 +1,8 @@
 <?xml version='1.0' encoding='windows-1252'?>
 <Wix xmlns='http://schemas.microsoft.com/wix/2006/wi'>
   <Product Name='Whonix'
-    Id='ABCDDCBA-86C7-4D14-AEC0-86416A69ABDE'
-    UpgradeCode='ABCDDCBA-7349-453F-94F6-BCB5110BA4FD'
+    Id='1CCD01E3-5673-43B9-9061-40A6CD8A323A'
+    UpgradeCode='4845FCB7-255A-4979-A287-275D43D0B1A1'
     Language='1033'
     Codepage='1252'
     Version='$(var.whonixVersion)'
@@ -24,29 +24,26 @@
     <Directory Id='TARGETDIR' Name='SourceDir'>
       <Directory Id='ProgramFiles64Folder' Name='PFiles'>
         <Directory Id='INSTALLDIR' Name='Whonix'>
+            
+          <Component Id='WhonixOVAComp' Guid='5505AFE9-85C4-45CB-8EB4-90146736ED4E'>
+            <File Id='WhonixOVA' Name='Whonix.ova'
+              DiskId='1' Source='$(var.whonixFileOva)' KeyPath='no' />
+          </Component>
 
-          <Component Id='MainExecutable' Guid='ABCDDCBA-83F1-4F22-985B-FDB3C8ABD471'>
+          <Component Id='MainComponent' Guid='CEEE1E58-584F-4F8C-8465-9C82C9AB38D0'>
             <File Id='WhonixEXE' Name='Whonix.exe'
               DiskId='1' Source='$(var.whonixFileMainExe)' KeyPath='yes'>
               <Shortcut Id="startmenuWhonix" Directory="ProgramMenuDir"
                 Name="Whonix" WorkingDirectory='INSTALLDIR'
-                Icon="logo.ico" IconIndex="0" Advertise="yes" />
+                Icon="Whonix.ico" IconIndex="0" Advertise="yes" />
               <Shortcut Id="desktopWhonix" Directory="DesktopFolder"
                 Name="Whonix" WorkingDirectory='INSTALLDIR'
-                Icon="logo.ico" IconIndex="0" Advertise="yes" />
+                Icon="Whonix.ico" IconIndex="0" Advertise="yes" />
             </File>
+            <File Id='VBoxEXE' Name='vbox.exe'
+              DiskId='1' Source='$(var.whonixFileVboxExe)' KeyPath='no' />
             <File Id='licenseTXT' Name='license.txt'
               DiskId='1' Source='$(var.whonixFileLicense)' KeyPath='no' />
-          </Component>
-            
-          <Component Id='VBoxInstall' Guid='ABCDDCBA-83F1-4F22-985B-FDB3C8ABD472'>
-            <File Id='VBoxEXE' Name='vbox.exe'
-              DiskId='1' Source='$(var.whonixFileVboxExe)' KeyPath='yes' />
-          </Component>
-            
-          <Component Id='WhonixOVAComp' Guid='ABCDDCBA-83F1-4F22-985B-FDB3C8ABD473'>
-            <File Id='WhonixOVA' Name='Whonix.ova'
-              DiskId='1' Source='$(var.whonixFileOva)' KeyPath='yes' />
           </Component>
             
         </Directory>
@@ -54,7 +51,7 @@
       
       <Directory Id="ProgramMenuFolder" Name="Programs">
         <Directory Id="ProgramMenuDir" Name="Whonix">
-          <Component Id="ProgramMenuDir" Guid="ABCDDCBA-7E98-44CE-B049-C477CC0A2B00">
+          <Component Id="ProgramMenuDir" Guid="602EA0D2-DBE7-4A4F-ACA4-F6FB23550D3D">
             <RemoveFolder Id='ProgramMenuDir' On='uninstall' />
             <RegistryValue Root='HKCU' Key='Software\[Manufacturer]\[ProductName]'
               Type='string' Value='' KeyPath='yes' />
@@ -67,50 +64,21 @@
     
     <Feature Id='Complete' Level='1'>
       <Feature Id='MainProgram' Level='1'>
-        <ComponentRef Id='MainExecutable' />
-        <ComponentRef Id='VBoxInstall' />
+        <ComponentRef Id='MainComponent' />
       </Feature>
 
       <Feature Id='Data' Level='1'>
         <ComponentRef Id='WhonixOVAComp' />
       </Feature>
     </Feature>
-    
-    <Property Id='NOTEPAD'>C:\Windows\System32\Notepad.exe</Property>
-    <CustomAction Id='LaunchFile' Property='NOTEPAD'
-      ExeCommand='[SourceDir]license.txt' Return='ignore' />
-    <Property Id='VBOX'>"C:\Program Files\Oracle\VirtualBox\VboxManage.exe"</Property>
-    <!--CustomAction Id='StartVBox' Property='VBOX'
-      ExeCommand='import [SourceDir]Whonix.ova' Return='ignore' /-->
-    <!--CustomAction Id='StartMainExe' FileKey='WhonixEXE'
-      ExeCommand='[OriginalDatabase]' Return='asyncNoWait' Execute="deferred" Impersonate="no" /-->
       
-    <CustomAction Id='InstallVBox' FileKey='VBoxEXE'
-      ExeCommand='' Return='ignore' Execute="deferred" Impersonate="no" />
     <CustomAction Id='StartMainExe' FileKey='WhonixEXE'
       ExeCommand='[OriginalDatabase]' Return='asyncNoWait' Execute="commit" Impersonate="yes" />
     <InstallExecuteSequence>
-      <!-- Custom Action='LaunchFile' After='InstallFinalize'>NOT InstalledX</Custom -->
       <Custom Action='StartMainExe' After='InstallFinalize'>NOT Installed</Custom>
-      <!-- Custom Action='StartMainExe' After='InstallFiles' Before='InstallFinalize'>NOT Installed</Custom -->
     </InstallExecuteSequence>
-
-    <!-- 
-    <Binary Id="vbox.exe" SourceFile="vbox.exe" />
-    <CustomAction Id='LaunchFile' BinaryKey='vbox.exe' ExeCommand='' Return='ignore' />
-
-    <UIRef Id="WixUI_InstallDir" />
-    <Property Id='WIXUI_INSTALLDIR' Value="INSTALLDIR" />
-    <UIRef Id="WixUI_ErrorProgressText" /> 
-    
-    <UI>
-      <Dialog Id="InstallDlg" Width="370" Height="270"
-        Title="[ProductName] Setup" NoMinimize="yes">
-    
-      </Dialog>
-    </UI>
-    -->
      
-    <Icon Id="logo.ico" SourceFile="logo.ico" />
+    <Icon Id="Whonix.ico" SourceFile="Whonix.ico" />
+    <Property Id="ARPPRODUCTICON" Value="Whonix.ico" />
   </Product>
 </Wix>
