fix int 200 for minimal windows installer 64 bit version

--- a/WhonixStarterSetup.wxs
+++ b/WhonixStarterSetup.wxs
@@ -19,7 +19,7 @@
       Description="$(var.whonixDescription)"
       Comments='Copyright (c) by $(var.whonixManufacturer)'
       Manufacturer='$(var.whonixManufacturer)'
-      InstallerVersion='$(var.whonixInstallerVersion)'
+      InstallerVersion='200'
       Languages='1033'
       Compressed='yes'
       SummaryCodepage='1252' />
